fix: Fixed tests and clases for ApartmentMember
This commit includes fixes for the ApartmentMemberService and its tests.
Also edites de application-test.yml to add a google client id for testing purposes.